tests/baselines/reference/parserAccessors7.errors.txt
parserAccessors7.ts(1,15): error TS1054: A 'get' accessor cannot have parameters.
parserAccessors7.ts(1,15): error TS2378: A 'get' accessor must return a value.


==== parserAccessors7.ts (2 errors) ====
    var v = { get foo(v: number) { } };
                  ~~~
!!! error TS1054: A 'get' accessor cannot have parameters.
                  ~~~
!!! error TS2378: A 'get' accessor must return a value.